@@ -12,6 +12,9 @@
     Manager framework, ignored if using Base Replication.
   * Implements "DB->exists()".
   * Add support for "DB_IMMUTABLE_KEY" flag.
+  * Add support for "DB_REP_LOCKOUT" exception.
+  * Support returning a list of strings in "associate()"
+    callback.  (Kung Phu)
 
 4.7.3: (Python 2.6 release. First release with Python 3.0 support)
   * "private" is a keyword in C++.  (Duncan Grisby)
